--- a/configs/arithmetic__div_hard_5.yaml
+++ b/configs/arithmetic__div_hard_5.yaml
@@ -1,8 +1,8 @@
 name: 'arithmetic__div'
-task: 'arithmetic__div_hard'
+task: 'arithmetic__div_hard_5'
 in_path: 'data/mathematics_dataset-v1.0/train-hard/'
 out_path: 'experiments/'
-example: [0,10]
+example: [0,1]
 start: 0
 end: null
 pool_size: 5
