--- a/configs/arithmetic__add_sub_hard_multiple_generated.yaml
+++ b/configs/arithmetic__add_sub_hard_multiple_generated.yaml
@@ -1,6 +1,6 @@
 name: 'arithmetic__add_sub_multiple'
-task: 'arithmetic__add_sub_multiple'
-in_path: 'data/mathematics_dataset-v1.0/train-easy/'
+task: 'arithmetic__add_sub_multiple_hard_generated'
+in_path: 'generated/train-hard/'
 out_path: 'experiments/'
 example: [0,10]
 start: 0
