--- a/configs/arithmetic__div_hard_generated.yaml
+++ b/configs/arithmetic__div_hard_generated.yaml
@@ -1,6 +1,6 @@
 name: 'arithmetic__div'
-task: 'arithmetic__div_hard'
-in_path: 'data/mathematics_dataset-v1.0/train-hard/'
+task: 'arithmetic__div_hard_generated'
+in_path: 'generated/train-hard/'
 out_path: 'experiments/'
 example: [0,10]
 start: 0
